tests/test_enum/bad/output/quick_pattern_4.catala_en.A.Interpret
[ERROR] Error during typechecking, incompatible types:
--> F
--> E

Error coming from typechecking the following expression:
  --> tests/test_enum/bad/quick_pattern_4.catala_en
   | 
17 | definition y equals x with pattern Case3
   |                     ^
   + Test

Type F coming from expression:
  --> tests/test_enum/bad/quick_pattern_4.catala_en
   | 
17 | definition y equals x with pattern Case3
   |                     ^
   + Test

Type E coming from expression:
  --> tests/test_enum/bad/quick_pattern_4.catala_en
   | 
12 | context x content E
   |                   ^
   + Test
